# py-homebox

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
docs/: faq.md  index.md  requirements.txt
docs/api/: actions.md  assets.md  client.md  groups.md  items.md  labelmaker.md  labels.md  locations.md  maintenance.md  notifiers.md  products.md  reporting.md  users.md
docs/examples/: create_location_add_items.md  get_homebox_statistics.md  get_items_label.md  index.md  item_attachments.md  user_management.md
examples/: .env.sample  create_item_from_template.py  create_location_add_items.py  get_homebox_statistics.py  get_items_label.py  groups_management.py  item_attachements.py  tags_management.py  template_management.py  user_management.py
homebox/: __init__.py  client.py
homebox/models/: __init__.py  attachment.py  auth.py  currencies.py  group.py  groups.py  items.py  labels.py  locations.py  maintenance.py  notifiers.py  products.py  services.py  tags.py  templates.py  types.py  users.py  v1.py  validate.py
tests/: smoke_test.py  test_mock_actions.py  test_mock_assets.py  test_mock_client.py  test_mock_groups.py  test_mock_items.py  test_mock_labelmaker.py  test_mock_labels.py  test_mock_locations.py  test_mock_maintenance.py  test_mock_notifiers.py  test_mock_products.py  test_mock_reporting.py  test_mock_tags.py  test_mock_templates.py  test_mock_users.py  test_real.py
