
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homebox"
version = "0.1.0"
description = "A Python wrapper for the Homebox API"
authors = [{ name = "Andrei Paraschiv", email = "andrei@thephpfactory.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests",
    "pydantic",
]
[dependency-groups]
dev= [
  "pytest >=8.0.0",
  "pytest-cov >=6.0.0",
  "pytest-mock >=3.15.1",
  "pylint >=3.3.0",
  "coverage >=7.6.9",
  "pre-commit >=4.0.0",
  "ruff >=0.9.0",
  "codespell >=2.4.0",
  "ty >=0.0.1a26",
]
[project.urls]
"Homepage" = "https://github.com/AndyTheFactory/py-homebox"
"Bug Tracker" = "https://github.com/AndyTheFactory/py-homebox/issues"

[tool.hatch.build.targets.wheel]
packages = ["homebox"]
